服务组件初始化

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>autumn-gateway-starter</module>
         <module>autumn-gateway-api-plugin</module>
         <module>autumn-gateway-core</module>
+        <module>autumn-gateway-component</module>
     </modules>
 
     <name>autumn-gateway</name>
