--- a/autumn-gateway-component/pom.xml
+++ b/autumn-gateway-component/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>autumn-gateway</artifactId>
+        <artifactId>autumn-gateway-parent</artifactId>
         <groupId>com.autumn</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -11,8 +11,9 @@
 
     <packaging>pom</packaging>
     <modules>
-        <module>autumn-gateway-component-server-vertx</module>
-        <module>autumn-gateway-component-redis</module>
+        <module>server-vertx</module>
+        <module>data-redis</module>
+        <module>api-register</module>
     </modules>
 
     <artifactId>autumn-gateway-component</artifactId>
@@ -22,4 +23,17 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.autumn</groupId>
+            <artifactId>autumn-gateway-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
