--- a/autumn-gateway-component/api-register/pom.xml
+++ b/autumn-gateway-component/api-register/pom.xml
@@ -9,18 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>autumn-gateway-component-server-vertx</artifactId>
+    <artifactId>api-register</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.autumn</groupId>
-            <artifactId>autumn-gateway-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 </project>
