--- a/autumn-gateway-component/server-vertx/pom.xml
+++ b/autumn-gateway-component/server-vertx/pom.xml
@@ -9,11 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>autumn-gateway-component-redis</artifactId>
+    <artifactId>server-vertx</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.autumn</groupId>
+            <artifactId>autumn-gateway-core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
