--- a/autumn-gateway-starter/pom.xml
+++ b/autumn-gateway-starter/pom.xml
@@ -139,42 +139,13 @@
             <artifactId>disruptor</artifactId>
             <version>3.3.11</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.autumn</groupId>
+            <artifactId>server-vertx</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
-
-
-    <!--    <build>-->
-    <!--        <resources>-->
-    <!--            <resource>-->
-    <!--                <directory>src/main/java</directory>-->
-    <!--                <includes>-->
-    <!--                    <include>**/*.*</include>-->
-    <!--                </includes>-->
-    <!--            </resource>-->
-
-    <!--            <resource>-->
-    <!--                <directory>src/main/resources</directory>-->
-    <!--                <includes>-->
-    <!--                    <include>**/*.*</include>-->
-    <!--                </includes>-->
-    <!--            </resource>-->
-    <!--        </resources>-->
-
-    <!--        <plugins>-->
-    <!--            <plugin>-->
-    <!--                <groupId>org.springframework.boot</groupId>-->
-    <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-    <!--                <version>2.3.4.RELEASE</version>-->
-    <!--                <executions>-->
-    <!--                    <execution>-->
-    <!--                        <goals>-->
-    <!--                            <goal>repackage</goal>-->
-    <!--                        </goals>-->
-    <!--                    </execution>-->
-    <!--                </executions>-->
-    <!--            </plugin>-->
-    <!--        </plugins>-->
-
-    <!--    </build>-->
 
 
     <profiles>
