--- a/autumn-gateway-component/api-discover/pom.xml
+++ b/autumn-gateway-component/api-discover/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.autumn.component</groupId>
     <artifactId>api-discover</artifactId>
     <dependencies>
         <dependency>
@@ -17,7 +17,7 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.autumn</groupId>
+            <groupId>com.autumn.component</groupId>
             <artifactId>data-redis</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
