--- a/autumn-gateway-component/api-register/pom.xml
+++ b/autumn-gateway-component/api-register/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.autumn.component</groupId>
     <artifactId>api-register</artifactId>
 
     <properties>
