--- a/autumn-gateway-component/server-vertx/pom.xml
+++ b/autumn-gateway-component/server-vertx/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.autumn.component</groupId>
     <artifactId>server-vertx</artifactId>
 
     <properties>
@@ -21,6 +21,14 @@
             <groupId>com.autumn</groupId>
             <artifactId>autumn-gateway-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-zookeeper</artifactId>
         </dependency>
     </dependencies>
 </project>
