--- a/autumn-gateway-component/data-redis/pom.xml
+++ b/autumn-gateway-component/data-redis/pom.xml
@@ -23,6 +23,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.11.1</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
