--- a/autumn-gateway-starter/pom.xml
+++ b/autumn-gateway-starter/pom.xml
@@ -38,6 +38,14 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.autumn.component</groupId>
+            <artifactId>policy-provider</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
