--- a/autumn-gateway-component/server-vertx/pom.xml
+++ b/autumn-gateway-component/server-vertx/pom.xml
@@ -30,5 +30,9 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-zookeeper</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 </project>
