添加grpc代理 存在错误 1第一次访问报错， 2不支持后台多个grpc服务端

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>autumn-gateway-api-plugin</module>
         <module>autumn-gateway-core</module>
         <module>autumn-gateway-component</module>
+        <module>autumn-component</module>
     </modules>
 
     <name>autumn-gateway</name>
