--- a/autumn-gateway-component/server-vertx/pom.xml
+++ b/autumn-gateway-component/server-vertx/pom.xml
@@ -34,5 +34,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-http-proxy</artifactId>
+            <version>4.2.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
