--- a/autumn-gateway-common/pom.xml
+++ b/autumn-gateway-common/pom.xml
@@ -43,6 +43,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
 
 
     </dependencies>
