--- a/autumn-gateway-parent/pom.xml
+++ b/autumn-gateway-parent/pom.xml
@@ -27,15 +27,15 @@
         <maven-pmd-plugin.version>3.12.0</maven-pmd-plugin.version>
         <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
         <!-- util -->
-        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
-        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+        <spring-cloud.version>2021.0.3</spring-cloud.version>
+        <spring-boot.version>2.6.8</spring-boot.version>
 
         <commons-lang3.version>3.12.0</commons-lang3.version>
-        <commons-io.version>2.6</commons-io.version>
+        <commons-io.version>2.11.0</commons-io.version>
 
         <guava.version>30.1.1-jre</guava.version>
         <lombok.version>1.18.10</lombok.version>
-        <vertx.version>4.2.7</vertx.version>
+        <vertx.version>4.3.2</vertx.version>
         <!-- redis -->
         <redisson-spring-boot-starter.version>3.11.0</redisson-spring-boot-starter.version>
 
