--- a/autumn-component/grpc-netty-proxy/pom.xml
+++ b/autumn-component/grpc-netty-proxy/pom.xml
@@ -15,7 +15,7 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <grpc.version>1.43.2</grpc.version>
     </properties>
 
