--- a/autumn-gateway-api-plugin/proxy-http/pom.xml
+++ b/autumn-gateway-api-plugin/proxy-http/pom.xml
@@ -124,6 +124,7 @@
 
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
