--- a/autumn-gateway-component/server-vertx/pom.xml
+++ b/autumn-gateway-component/server-vertx/pom.xml
@@ -34,5 +34,9 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-http-proxy</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-zookeeper</artifactId>
+        </dependency>
     </dependencies>
 </project>
