--- a/autumn-component/grpc-netty-proxy/pom.xml
+++ b/autumn-component/grpc-netty-proxy/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <grpc.version>1.43.2</grpc.version>
+        <grpc.version>1.48.0</grpc.version>
     </properties>
 
     <dependencies>
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
-            <version>2.3.7.RELEASE</version>
+            <version>2.6.8</version>
         </dependency>
 
     </dependencies>
