--- a/autumn-gateway-parent/pom.xml
+++ b/autumn-gateway-parent/pom.xml
@@ -39,6 +39,7 @@
         <!-- redis -->
         <redisson-spring-boot-starter.version>3.17.5</redisson-spring-boot-starter.version>
 
+        <netty.version>4.1.78.Final</netty.version>
     </properties>
 
 
@@ -205,7 +206,18 @@
             </dependency>
 
 
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-bom</artifactId>
+                <version>${netty.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+
         </dependencies>
+
+
     </dependencyManagement>
 
     <profiles>
