--- a/autumn-gateway-api-plugin/pom.xml
+++ b/autumn-gateway-api-plugin/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>autumn-gateway-parent</artifactId>
         <groupId>com.autumn</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../autumn-gateway-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
