--- a/autumn-gateway-api-plugin/autumn-gateway-api-plugin-core/pom.xml
+++ b/autumn-gateway-api-plugin/autumn-gateway-api-plugin-core/pom.xml
@@ -46,6 +46,25 @@
             <artifactId>autumn-gateway-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 </project>
