--- a/autumn-gateway-api-plugin/pom.xml
+++ b/autumn-gateway-api-plugin/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>autumn-gateway-api-plugin-core</module>
         <module>proxy-http</module>
+        <module>divide</module>
     </modules>
 
     <properties>
