--- a/autumn-gateway-common/pom.xml
+++ b/autumn-gateway-common/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>autumn-gateway-parent</artifactId>
         <groupId>com.autumn</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../autumn-gateway-parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -34,6 +35,7 @@
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.4</version>
         </dependency>
+
 
         <dependency>
             <groupId>com.google.guava</groupId>
