--- a/autumn-gateway-parent/pom.xml
+++ b/autumn-gateway-parent/pom.xml
@@ -27,19 +27,17 @@
         <maven-pmd-plugin.version>3.12.0</maven-pmd-plugin.version>
         <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
         <!-- util -->
-        <spring-cloud.version>2021.0.3</spring-cloud.version>
-        <spring-boot.version>2.6.8</spring-boot.version>
+        <spring-cloud.version>2022.0.0</spring-cloud.version>
+        <spring-boot.version>3.0.0</spring-boot.version>
 
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-io.version>2.11.0</commons-io.version>
 
         <guava.version>30.1.1-jre</guava.version>
-        <lombok.version>1.18.10</lombok.version>
-        <vertx.version>4.3.3</vertx.version>
+        <lombok.version>1.18.24</lombok.version>
+        <vertx.version>4.3.7</vertx.version>
         <!-- redis -->
         <redisson-spring-boot-starter.version>3.17.5</redisson-spring-boot-starter.version>
-
-        <netty.version>4.1.78.Final</netty.version>
     </properties>
 
 
@@ -48,6 +46,19 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+
     </dependencies>
 
 
@@ -203,15 +214,6 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.9.0</version>
-            </dependency>
-
-
-            <dependency>
-                <groupId>io.netty</groupId>
-                <artifactId>netty-bom</artifactId>
-                <version>${netty.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
             </dependency>
 
 
