--- a/autumn-gateway-starter/pom.xml
+++ b/autumn-gateway-starter/pom.xml
@@ -76,10 +76,11 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-sleuth</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-sleuth</artifactId>-->
+<!--            -->
+<!--        </dependency>-->
 
 
         <dependency>
