--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>19</java.version>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
         <!-- maven properties-->
         <maven.test.skip>true</maven.test.skip>
         <!-- -->
@@ -47,10 +49,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>19</source>
+                    <target>19</target>
                     <encoding>UTF-8</encoding>
                     <!-- java8 保留参数名编译参数，支持 action 带参 -->
                     <compilerArgument>-parameters</compilerArgument>
